apps/docs/content/docs/v1/social/posts.mdx
---
title: Posts
description: Posts related to Social
---

import { Hr } from "@/components/hr"
import { Callout } from "@/components/callout"
import { EndpointDetails } from "@/components/endpoint-details"
import { TypeTable } from "next-docs-ui/components/type-table"

<Callout variant="warning">
  These are authenticated endpoints. You can visit [authentication](./authentication) to get an access token.
</Callout>

These endpoints allow you to create, read, update and delete posts. Posts are the main content of a social network, can be created by any profile and can receive reactions and comments.

This is a paginated and sortable endpoint. You can use the `limit` and `offset` query parameters to paginate the results. You can also use the `sort` and `sortOrder` query parameters to sort the results. Read more about the pagination and sorting features [here](../pagination-sorting).

## The Post model

<TypeTable
  type={{
    id: { type: "integer", description: "The unique identifier for the post." },
    title: { type: "string", description: "The title of the post." },
    body: { type: "string", description: "The body of the post." },
    tags: { type: "Array<string>", description: "A string array of tags." },
    media: { type: "string", description: "A URL to an image or video." },
    created: { type: "string", description: "The date the post was created." },
    updated: { type: "string", description: "The date the post was last updated." },
    _count: {
      type: "object",
      typeDescription: "{\n  comments: integer;\n  reactions: integer;\n}",
      description: "A JSON object containing the number of comments and reactions."
    }
  }}
/>

<Hr />

## Query parameters

Not all of the properties of a post are returned by default. You can use the following optional query parameters to include additional properties in the response.

<TypeTable
  type={{
    _author: { type: "boolean", default: "false", description: "Include author." },
    _comments: { type: "boolean", default: "false", description: "Include comments." },
    _reactions: { type: "boolean", default: "false", description: "Include reactions." }
  }}
/>

```json title="Example with all optional query parameters"
{
  "id": 0,
  "title": "string",
  "body": "string",
  "tags": ["string"],
  "media": "https://url.com/image.jpg",
  "created": "2022-09-04T08:08:38.830Z",
  "updated": "2022-09-04T08:08:38.830Z",
  "author": {
    "name": "string",
    "email": "user@example.com",
    "avatar": "https://url.com/image.jpg",
    "banner": "https://url.com/image.jpg"
  },
  "reactions": [
    {
      "symbol": "string",
      "count": 0,
      "postId": 0,
      "message": "string"
    }
  ],
  "comments": [
    {
      "body": "string",
      "replyToId": null, // or number if comment is reply to another comment
      "id": 0,
      "postId": 0,
      "owner": "string",
      "created": "2022-09-04T08:17:59.383Z",
      "author": {
        "name": "string",
        "email": "user@example.com",
        "avatar": "https://url.com/image.jpg",
        "banner": "https://url.com/image.jpg"
      }
    }
  ],
  "_count": {
    "comments": 0,
    "reactions": 0
  }
}
```

<Hr />

## Filtering

You can filter based on an entry in the tags array by using the `_tag` query flag. You may only filter by one tag at a time.

<TypeTable
  type={{
    _tag: { type: "string", description: "Only posts matching tag." },
    _active: { type: "boolean", description: "Only active posts." }
  }}
/>

An example query filtering for active listings with the `my_tag` tag.

<EndpointDetails path="/social/posts?_tag=my_tag&_active=true" />

<Hr />

## All entries

<EndpointDetails path="/social/posts" />

Retrieve all posts.

> If you want to get all posts by a specific profile, you can use the [posts by profile](./profiles#all-posts-by-profile) endpoint.

```json title="Response"
[
  {
    "id": 0,
    "title": "string",
    "body": "string",
    "tags": ["string"],
    "media": "https://url.com/image.jpg",
    "created": "2022-09-04T08:08:38.830Z",
    "updated": "2022-09-04T08:08:38.830Z",
    "_count": {
      "comments": 0,
      "reactions": 0
    }
  },
  {
    "id": 0,
    "title": "string",
    "body": "string",
    "tags": ["string"],
    "media": "https://url.com/image.jpg",
    "created": "2022-09-04T08:08:38.830Z",
    "updated": "2022-09-04T08:08:38.830Z",
    "_count": {
      "comments": 0,
      "reactions": 0
    }
  }
  // ...
]
```

<Hr />

## Single entry

<EndpointDetails path="/social/posts/<id>" />

Retrieve a single post by its id.

> Use the `_author`, `_comments` and/or `_reactions` flags to get more data from this request.

```json title="Response"
{
  "id": 0,
  "title": "string",
  "body": "string",
  "tags": ["string"],
  "media": "https://url.com/image.jpg",
  "created": "2022-09-04T08:08:38.830Z",
  "updated": "2022-09-04T08:08:38.830Z",
  "_count": {
    "comments": 0,
    "reactions": 0
  }
}
```

<Hr />

## All entries from followed profiles

<EndpointDetails path="/social/posts/following" />

Retrieve all posts from profiles that the authenticated user is following.

The data returned is similar to the [all entries](#all-entries) endpoint and accepts the same optional query flags.

<Hr />

## Create entry

<EndpointDetails method="POST" path="/social/posts" />

Create a new post. Only the `title` property is required, but we recommend at least including the `body` and `media` properties as well.

> Please note that the `media` property must be a fully formed URL that links to a live and publicly accessible image. The API will check the provided URL and if it cannot be accessed publicly you will receive a 400 error response.

```json title="Request"
{
  "title": "string", // Required
  "body": "string", // Optional
  "tags": ["string"], // Optional
  "media": "https://url.com/image.jpg" // Optional
}
```

```json title="Response"
{
  "id": 0,
  "title": "string",
  "body": "string",
  "tags": ["string"],
  "media": "https://url.com/image.jpg",
  "created": "2022-09-04T16:21:02.042Z",
  "updated": "2022-09-04T16:21:02.042Z",
  "_count": {
    "comments": 0,
    "reactions": 0
  }
}
```

<Hr />

## Update entry

<EndpointDetails method="PUT" path="/social/posts/<id>" />

Update a post based on its id. This endpoint returns the updated post.

> Please note that the `media` property must be a fully formed URL that links to a live and publicly accessible image. The API will check the provided URL and if it cannot be accessed publicly you will receive a 400 error response.

```json title="Request"
{
  "title": "string",
  "body": "string",
  "tags": ["string"],
  "media": "https://url.com/image.jpg"
}
```

```json title="Response"
{
  "id": 0,
  "created": "2022-09-04T16:21:02.044Z",
  "updated": "2022-09-04T16:21:02.044Z",
  "title": "string",
  "body": "string",
  "tags": ["string"],
  "media": "https://url.com/image.jpg",
  "_count": {
    "comments": 0,
    "reactions": 0
  }
}
```

<Hr />

## Delete entry

<EndpointDetails method="DELETE" path="/social/posts/<id>" />

Delete a post based on its id.

Returns an empty 204 response on success.

<Hr />

## React to entry

<EndpointDetails method="PUT" path="/social/posts/<id>/react/<symbol>" />

React to a post with a symbol.

Returns the symbol, reaction count for that symbol, and the original post id.

The `symbol` parameter should be an actual emoji. For example, to react to a post with a 👍 emoji, you would use the following endpoint: `/social/posts/<id>/react/👍`

> You do not need to include a body for this request.

```json title="Response"
{
  "symbol": "string",
  "count": 0,
  "postId": 0
}
```

<Hr />

## Comment on entry

<EndpointDetails method="POST" path="/social/posts/<id>/comment" />

This endpoint allows a comment to be made on a post. The optional `replyToId` property can be used to link this comment to an existing comment.

```json title="Request"
{
  "body": "string", // Required
  "replyToId": 0 // Optional - Only required if replying to another comment
}
```

```json title="Response"
{
  "body": "string",
  "replyToId": null, // or replyToId number if provided in request
  "id": 0,
  "postId": 0,
  "owner": "string",
  "created": "2022-09-04T16:29:07.175Z",
  "author": {
    "name": "string",
    "email": "user@example.com",
    "avatar": "https://url.com/image.jpg",
    "banner": "https://url.com/image.jpg"
  }
}
```
